--- a/wiki/InstallingandRunning.wiki
+++ b/wiki/InstallingandRunning.wiki
@@ -80,21 +80,29 @@ distance thresholds, then the output will be of the form {{{ clusters-<threshold
 {{{ counts.txt }}} is also a tab delimited table. It lists the number of reads assigned to each cluster, one
 per row. The column list the count per sample.
 
+The cluster naming is of the form {{{Clusters-X.Y}}}. The {{{X}}} is the _super-cluster_ ID. Any transcript which shares even a single read with another transcript will have the same _super-cluster_ ID. The {{{Y}}} indicates the cluster number within the _super-cluster_ (ie. those which resulted from the hierarchical clustering and expression testing. If you run Corset with the option {{{-m 0}}} (no filtering on the number of reads), you might also find clusters with the prefix "NoReadsCluster". These clusters have no reads which map to them, and are therefore excluded from the counts file.
 
 = Example pipeline =
 
 Here we provide a full example for going from RNA-Seq reads to gene-level differential expression results.
+I'm going to use the yeast example running Trinity from our paper because it's small enough to run quickly,
+but you can replace the file names with whatever data you have.
 
-... Oases yeast example? ....
-
-
-Download Reads
----
+You can download the yeast data from [http://sra.dnanexus.com/runs/SRR453566 here]. You will need to download files SRR453566 to SRR453571. Sra provides tools to covert from sra to other formats [http://trace.ncbi.nlm.nih.gov/Traces/sra/sra.cgi?view=software here]. Use:
+{{{
+fastq-dump --split-3 SRR453566.sra
+}}}
+on each file to get paired-end fastq files.
 
 Trim the Reads
 ---
+It's worth while to clean the reads a little before running the de novo assembler. I like
+to use [https://code.google.com/p/condetri/ condetri] because it can handle paired-end reads well.
+{{{
+perl <path to condetri>/condetri_v2.2.pl -sc=33 -fastq1=SRR453566_1.fastq -fastq2=SRR453566_2.fastq
+}}}
 
-Perform a de novo assembly
+Perform the de novo assembly
 ---
 
 Map read back to the transcriptome
@@ -105,4 +113,3 @@ Run corset
 
 Run edgeR
 ---
-
