Edited wiki page InstallingandRunning through web user interface.

--- a/wiki/InstallingandRunning.wiki
+++ b/wiki/InstallingandRunning.wiki
@@ -2,7 +2,7 @@
 
 = Introduction =
 
-Add your content here.
+Corset is a method and software program to go from a de novo transcriptome assembly to gene-level counts. Our software takes a set of reads that have been multi-mapped to the transcriptome (where multiple alignments per read were reported) and hierarchically clusters the transcripts based on the proportion of shared reads and expression patterns. It will report the clusters and gene-level counts for each sample, which are easily tested for differential expression with count based tools such as edgeR and DESeq.
 
 
 = Requirements =
