--- a/wiki/Example.wiki
+++ b/wiki/Example.wiki
@@ -7,28 +7,71 @@ Here we provide a full example for going from RNA-Seq reads to gene-level differ
 I'm going to use the yeast example running Trinity from our paper because it's small enough to run quickly,
 but you can replace the file names with whatever data you have.
 
-You can download the yeast data from [http://sra.dnanexus.com/runs/SRR453566 here]. You will need to download files SRR453566 to SRR453571. Sra provides tools to covert from sra to other formats [http://trace.ncbi.nlm.nih.gov/Traces/sra/sra.cgi?view=software here]. Use:
+You can download the yeast data from [http://sra.dnanexus.com/runs/SRR453566 here]. You will need to download files SRR453566 to SRR453571. SRA provides tools to covert from their format to others [http://trace.ncbi.nlm.nih.gov/Traces/sra/sra.cgi?view=software here]. Use:
 {{{
 fastq-dump --split-3 SRR453566.sra
 }}}
 on each file to get paired-end fastq files.
 
-Trim the Reads
----
-It's worth while to clean the reads a little before running the de novo assembler. I like
-to use [https://code.google.com/p/condetri/ condetri] because it can handle paired-end reads well.
+==Prepare the reads==
+It's worth while cleaning the reads before running the de novo assembler. I like
+to use [https://code.google.com/p/condetri/ condetri] to trim off any read ends which have low quality scored. It can handle paired-end reads well.
 {{{
 perl <path to condetri>/condetri_v2.2.pl -sc=33 -fastq1=SRR453566_1.fastq -fastq2=SRR453566_2.fastq
 }}}
 
-Perform the de novo assembly
----
+==Perform the de novo assembly==
 
-Map read back to the transcriptome
----
+In this example we will use Trinity to assemble the transcripts. You will have more power to detect transcripts if all the samples are pooled, therefore the first step is to concatenate the fastq files together:
 
-Run corset
----
+{{{
+cat *_trim1.fastq >> all_1.fastq
+cat *_trim2.fastq >> all_2.fastq
+}}}
 
-Run edgeR
----
+now run Trinity:
+{{
+TRIN=/mnt/storage/nadiad/trinityrnaseq_r2013-02-25/Trinity.pl
+Trinity.pl --seqType fq --left all_1.fastq --right all_2.fastq
+}}
+
+Note a couple of tricks in getting Trinity to work:
+   * I have alway needed to set {{{ulimit -s unlimited}}}
+   * I have often needed to increase the memory used by jellyfish. e.g. {{--JM 100G}}}
+   * I like to use the {{{--full_cleanup}}} option so I don't get hundres of big files left over.
+
+The result should be a fasta file of transcripts called {{{Trinity.fasta}}}
+
+==Map reads back to the transcriptome==
+
+Now we need to multi-map the reads back to the transcriptome. In this
+example I will use bowtie. The bowtie option --all means that all alignments are
+reported. If you have a large dataset, you might like to limit the number of reported
+alignment to a large (but finite) number, as this will be faster and the
+resulting bam files will be smaller. In bowtie you could do this with -k 40 (40 reported
+alignments)
+
+Build the bowtie index:
+{{{
+bowtie-build Trinity.fasta Trinity
+}}}
+
+Map each file:
+{{{
+bowtie --all -S ... -1 ${1} -2 ${2} > ${3}.sam 
+sam2bam ${3}.sam...
+
+}}}
+
+==Run corset==
+
+The first three files (in numeric order) belong to one experimental group in our example while the final three belong to another. Batch versus chemostat growing conditions. We provide this information to Corset to improve the power it has when splitting differentially expressed paralogs (the -g option below gives these groupings). We also provide a name: A1..B3, for each of the size sample, which will appear in the header of the counts file.
+
+{{{
+corset -g 1,1,1,2,2,2 -n A1,A2,A3,B1,B2,B3 *.bam
+}}}
+
+==Run edgeR==
+
+
+
