--- a/wiki/Example.wiki
+++ b/wiki/Example.wiki
@@ -22,7 +22,7 @@ perl <path to condetri>/condetri_v2.2.pl -sc=33 -fastq1=SRR453566_1.fastq -fastq
 
 ==Perform the de novo assembly==
 
-In this example we will use Trinity to assemble the transcripts. You will have more power to detect transcripts if all the samples are pooled, therefore the first step is to concatenate the fastq files together:
+In this example we will use [http://trinityrnaseq.sourceforge.net/ Trinity] to assemble the transcripts. You will have more power to detect transcripts if all the samples are pooled, therefore the first step is to concatenate the fastq files together:
 
 {{{
 cat *_trim1.fastq >> all_1.fastq
@@ -30,10 +30,9 @@ cat *_trim2.fastq >> all_2.fastq
 }}}
 
 now run Trinity:
-{{
-TRIN=/mnt/storage/nadiad/trinityrnaseq_r2013-02-25/Trinity.pl
+{{{
 Trinity.pl --seqType fq --left all_1.fastq --right all_2.fastq
-}}
+}}}
 
 Note a couple of tricks in getting Trinity to work:
    * I have alway needed to set {{{ulimit -s unlimited}}}
@@ -45,8 +44,7 @@ The result should be a fasta file of transcripts called {{{Trinity.fasta}}}
 ==Map reads back to the transcriptome==
 
 Now we need to multi-map the reads back to the transcriptome. In this
-example I will use bowtie. The bowtie option --all means that all alignments are
-reported. If you have a large dataset, you might like to limit the number of reported
+example I will use [http://bowtie-bio.sourceforge.net/index.shtml bowtie]. The bowtie option --all means that all alignments are reported. If you have a large dataset, you might like to limit the number of reported
 alignment to a large (but finite) number, as this will be faster and the
 resulting bam files will be smaller. In bowtie you could do this with -k 40 (40 reported
 alignments)
@@ -72,6 +70,3 @@ corset -g 1,1,1,2,2,2 -n A1,A2,A3,B1,B2,B3 *.bam
 }}}
 
 ==Run edgeR==
-
-
-
