--- a/wiki/Example.wiki
+++ b/wiki/Example.wiki
@@ -47,7 +47,7 @@ The result should be a fasta file of transcripts called {{{Trinity.fasta}}}
 ==Map reads back to the transcriptome==
 
 Now we need to multi-map the reads back to the transcriptome. In this example I will use [http://bowtie-bio.sourceforge.net/index.shtml bowtie]. The bowtie option {{{--all}}} means that all alignments are reported. If you have a large dataset, you might like to limit the number of reported
-alignment to a large (but finite) number, as this will be faster and the resulting bam files will be smaller. In bowtie you could do this with {{{-k 40}} (40 reported alignments). 
+alignment to a large (but finite) number, as this will be faster and the resulting bam files will be smaller. In bowtie you could do this with {{{-k 40}}} (40 reported alignments). 
 
 In the paper, and this example, we map the reads back as pair-end, meaning that if only one read end maps to a transcript and not both, neither is reported. There may be some disadvantages in this, but we have not experimented with it. Feel free to try different mapping options, such as single-end and let us know if it makes a difference!
 
