Edited wiki page Example through web user interface.

--- a/wiki/Example.wiki
+++ b/wiki/Example.wiki
@@ -85,3 +85,21 @@ corset -g 1,1,1,2,2,2 -n A1,A2,A3,B1,B2,B3 *.bam
 }}}
 
 ==Run edgeR==
+
+[http://www.bioconductor.org/packages/release/bioc/html/edgeR.html egdeR] is a bioconductor package in R which will be used to test the count data for significant differential expression. The snippet of
+code below shows how you can get a list of the top differentially expressed clusters in R.
+
+{{{
+library(edgeR)
+
+count_data<-read.delim("counts.txt",row.names=1)
+group<-factor(c(1,1,1,2,2,2))
+
+dge<-DGEList(counts=count_data,group=group)
+dge<-calcNormFactors(dge)
+dge<-estimateCommonDisp(dge)
+dge<-estimateTagwiseDisp(dge)
+
+results<-exactTest(dge)
+topTags(results)
+}}}
