Edited wiki page Download through web user interface.

--- a/wiki/Download.wiki
+++ b/wiki/Download.wiki
@@ -3,10 +3,10 @@
 
 = Most Recent/Recommended Version =
 
-  * [https://googledrive.com/host/0B1FwZagazjpcc0JLZWllcFlwUXc/corset-0.93.tar.gz corset 0.93] - from 27th August 2013
+  * [https://googledrive.com/host/0B1FwZagazjpcc0JLZWllcFlwUXc/corset-0.94.tar.gz corset 0.94] - from 8th October 2013 (minor fix)
 
 = Older Versions =
-
+  * [https://googledrive.com/host/0B1FwZagazjpcc0JLZWllcFlwUXc/corset-0.93.tar.gz corset 0.93] - from 27th August 2013 (bug fix)
   * [https://googledrive.com/host/0B1FwZagazjpcc0JLZWllcFlwUXc/corset-0.92.tar.gz corset 0.92] - from 13th August 2013 (bug fix)
   * [https://googledrive.com/host/0B1FwZagazjpcc0JLZWllcFlwUXc/corset-0.91.tar.gz corset 0.91] - from 12th June 2013 (install fix)
   * [https://googledrive.com/host/0B1FwZagazjpcc0JLZWllcFlwUXc/corset-0.9.tar.gz corset 0.9] - from 30th July 2013
