--- a/wiki/Download.wiki
+++ b/wiki/Download.wiki
@@ -3,6 +3,10 @@
 
 = Most Recent/Recommended Version =
 
+  * <a href="https://googledrive.com/host/0B1FwZagazjpcRFN2eVVxdXc5c0k/corset-1.00.tar.gz"> corset-1.00.tar.gz </a> - from 11th July 2014. Major improvements in memory usage.
+
+= Older Versions =
+
   * <a href="https://googledrive.com/host/0B1FwZagazjpcc0JLZWllcFlwUXc/corset-0.94.tar.gz" target=”_blank” onclick=”ga('send','event','Download','click','0.94');”> corset 0.94 </a> - from 8th October 2013 (minor fix)
 
 = Older Versions =
