--- a/wiki/Download.wiki
+++ b/wiki/Download.wiki
@@ -2,7 +2,7 @@
 #labels Featured
 
 = Most Recent/Recommended Version =
-  * <a href="https://docs.google.com/uc?export=download&id=0B1FwZagazjpcRFN2eVVxdXc5c0k"> corset 1.00 </a> - from 11th July 2014 (major improvements in memory usage over older versions).
+  * <a href="https://docs.google.com/uc?export=download&id=0B1FwZagazjpcRFN2eVVxdXc5c0k"> corset 1.00 </a> - from 11th July 2014 (major improvements in memory efficiency over older versions).
 = Older Versions =
 
   * [https://googledrive.com/host/0B1FwZagazjpcc0JLZWllcFlwUXc/corset-0.94.tar.gz corset 0.94] - from 8th October 2013 (minor fix)
