--- a/wiki/Download.wiki
+++ b/wiki/Download.wiki
@@ -7,10 +7,10 @@
 
 = Older Versions =
 
-  * <a href="https://docs.google.com/uc?export=download&id=0B1FwZagazjpcV0luTDZteHNPWXc"> corset 1.02 </a> - from 4th August 2014 ( bug fix for mac compilation and addition of the command corset_fasta_ID_changer for prefixing fasta file contig ids with cluster groups )
-  * [https://docs.google.com/uc?export=download&id=0B1FwZagazjpcRFN2eVVxdXc5c0k corset 1.00] - from 11th July 2014 (major improvements in memory efficiency over older versions).
-  * [https://googledrive.com/host/0B1FwZagazjpcc0JLZWllcFlwUXc/corset-0.94.tar.gz corset 0.94] - from 8th October 2013 (minor fix)
-  * [https://googledrive.com/host/0B1FwZagazjpcc0JLZWllcFlwUXc/corset-0.93.tar.gz corset 0.93] - from 27th August 2013 (bug fix)
-  * [https://googledrive.com/host/0B1FwZagazjpcc0JLZWllcFlwUXc/corset-0.92.tar.gz corset 0.92] - from 13th August 2013 (bug fix)
-  * [https://googledrive.com/host/0B1FwZagazjpcc0JLZWllcFlwUXc/corset-0.91.tar.gz corset 0.91] - from 12th June 2013 (install fix)
-  * [https://googledrive.com/host/0B1FwZagazjpcc0JLZWllcFlwUXc/corset-0.9.tar.gz corset 0.9] - from 30th July 2013
+  * corset 1.02 (<a href="https://docs.google.com/uc?export=download&id=0B1FwZagazjpcV0luTDZteHNPWXc">source</a>) - from 4th August 2014 ( bug fix for mac compilation and addition of the command corset_fasta_ID_changer for prefixing fasta file contig ids with cluster groups )
+  * corset 1.00 ([https://docs.google.com/uc?export=download&id=0B1FwZagazjpcRFN2eVVxdXc5c0k source]) - from 11th July 2014 (major improvements in memory efficiency over older versions).
+  * corset 0.94 ([https://googledrive.com/host/0B1FwZagazjpcc0JLZWllcFlwUXc/corset-0.94.tar.gz source]) - from 8th October 2013 (minor fix)
+  * corset 0.93 ([https://googledrive.com/host/0B1FwZagazjpcc0JLZWllcFlwUXc/corset-0.93.tar.gz source]) - from 27th August 2013 (bug fix)
+  * corset 0.92 ([https://googledrive.com/host/0B1FwZagazjpcc0JLZWllcFlwUXc/corset-0.92.tar.gz source]) - from 13th August 2013 (bug fix)
+  * corset 0.91 ([https://googledrive.com/host/0B1FwZagazjpcc0JLZWllcFlwUXc/corset-0.91.tar.gz corset source]) - from 12th June 2013 (install fix)
+  * corset 0.9 ([https://googledrive.com/host/0B1FwZagazjpcc0JLZWllcFlwUXc/corset-0.9.tar.gz source]) - from 30th July 2013
