--- a/wiki/Download.wiki
+++ b/wiki/Download.wiki
@@ -3,7 +3,7 @@
 
 = Most Recent/Recommended Version =
 
-  * corset 1.03 ([https://docs.google.com/uc?export=download&id=0B1FwZagazjpcbXVfbGpmUkx5bTg linux64 binary]) ([https://docs.google.com/uc?export=download&id=0B1FwZagazjpcaENOeGNSTWgzRU0 source]) - from 10th September 2014 (bug fix to allow compilation against samtools 1.0)
+  * corset 1.03 ([https://googledrive.com/host/0B1FwZagazjpcbXVfbGpmUkx5bTg linux64 binary])([https://googledrive.com/host/0B1FwZagazjpcaENOeGNSTWgzRU0 source]) - from 10th September 2014 (bug fix to allow compilation against samtools 1.0)
 
 = Older Versions =
 
